# G4McMasterTDS

./: CMakeLists.txt  G4McMasterTDS.cc  README.md
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  G4PSIncidentKineticEnergy.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh
macros/: runCl36ISO.mac  runCo60ISO.mac  runCs137ISO.mac  runElectronUniformLogISO.mac  runFe59ISO.mac  runGammaPowerElectronGaussianISO.mac  runGammaUniformLogISO.mac  runSr90Y90ISO.mac  vis.mac
results/: McMasterTDS_Response.root
results/Cl36/: Cl36_R_30_cm_Nr_2000000000_ISO.info  Cl36_R_30_cm_Nr_2000000000_ISO.root  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1 - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1 - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det2 - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det2 - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det2_det3 - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det2_det3 - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det3  - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det3  - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det3 - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det1_det3 - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2  - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2  - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2 - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2 - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2_det3  - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2_det3  - Unfolded Fluence Spectrum.xlsx  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2_det3 - Unfolded Fluence Spectrum.txt  Cl36_R_30_cm_Nr_2000000000_ISO_model_det2_det3 - Unfolded Fluence Spectrum.xlsx  (+4 more)
src/: ActionInitialization.cc  DetectorConstruction.cc  G4PSIncidentKineticEnergy.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc
(+735 files in other folders)
